完善vim配置，新增tmux配置

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -143,6 +143,12 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
+# 最大化
+# zoom pane <-> window
+# #http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/examples/tmux-zoom.sh
+# bind ^z run "tmux-zoom"
+# ##
+
 
 # ►_◄
 #
