--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,22 @@
 
 
 # -- general -------------------------------------------------------------------
+# 最大化
+# zoom pane <-> window
+# #http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/examples/tmux-zoom.sh
+# bind ^z run "tmux-zoom"
+# ##
+
+set-window-option -g mode-keys vi #可以设置为vi或emacs
+set-window-option -g utf8 on #开启窗口的UTF-8支持
+bind y copy-mode #绑定esc到复制模式
+# paste buffer (prefix Ctrl+p)
+bind ^p pasteb
+# select (v)
+bind -t vi-copy v begin-selection
+# copy (y)
+bind -t vi-copy y copy-selection
+
 
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
@@ -104,6 +120,7 @@ bind -t vi-choice L tree-expand-all
 bind -t vi-choice Escape cancel
 
 
+
 # -- edit mode -----------------------------------------------------------------
 
 # the following vi-copy bindings match my vim settings
@@ -131,6 +148,7 @@ bind -t vi-copy H start-of-line
 bind -t vi-copy L end-of-line
 
 # copy to Mac OSX pasteboard
+# 恢复用户空间
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 
@@ -142,13 +160,6 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 # -- 8< ------------------------------------------------------------------------
 
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
-
-# 最大化
-# zoom pane <-> window
-# #http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/examples/tmux-zoom.sh
-# bind ^z run "tmux-zoom"
-# ##
-
 
 # ►_◄
 #
