--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,10 @@
 [alias]
 lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%ci) %C(bold blue)<%an>%Creset' --abbrev-commit --
 
-; [http]
-; 	proxy = http://127.0.0.1:8118
-; [https]
-; 	proxy = http://127.0.0.1:8118
+[http]
+	proxy = http://127.0.0.1:8118
+[https]
+	proxy = http://127.0.0.1:8118
+[user]
+	email = b40750428@hotmail.com
+	name = wuzhongyang
