支持tmux的resurrect插件

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@
 # ##
 
 set-window-option -g mode-keys vi #可以设置为vi或emacs
-set-window-option -g utf8 on #开启窗口的UTF-8支持
+# set-window-option -g utf8 on #开启窗口的UTF-8支持(2.3版本不再需要)
 bind y copy-mode #绑定esc到复制模式
 # paste buffer (prefix Ctrl+p)
 bind ^p pasteb
@@ -1057,3 +1057,5 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # }
 #
 # "$@"
+
+run-shell ~/src/tmux-resurrect/resurrect.tmux
