--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ set -s quiet on                           # disable various messages
 # set -s focus-events on
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+bind C-e send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
