--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,10 +30,10 @@ set -sg repeat-time 600                   # increase repeat timeout
 set -s quiet on                           # disable various messages
 # set -s focus-events on
 
-set -g prefix2 C-e                        # GNU-Screen compatible prefix
-bind C-e send-prefix -2
+set -g prefix2 C-x                        # GNU-Screen compatible prefix
+bind C-x send-prefix -2
 
-set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
+set -q -g status-utf9 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
 set -g history-limit 5000                 # boost history
